# riippuvuudet

./: README.md
osa2/hello-docker/: Dockerfile  hello.py
osa2/nhl-statistics-1/: .coverage  pyproject.toml
osa2/nhl-statistics-1/src/: KonsoliIO  index.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: nhl_test.py
osa2/poetry-web/: pyproject.toml
osa2/poetry-web/src/: index.py
osa2/project-reader/: pyproject.toml
osa2/project-reader/src/: index.py  project.py  project_reader.py
osa2/riippuvuuksien-injektointi-1/: pyproject.toml
osa2/stats/: players-22-23.txt  players-23-24.txt  players-24-25.txt
osa2/test-project/: README.md  pyproject.toml
osa2/test-project/src/: index.py
osa3/hello-robot/: log.html  output.xml  pyproject.toml  report.html
osa3/login-robot/: log.html  output.xml  pyproject.toml  report.html
osa3/login-robot/src/tests/: login.robot  register.robot
osa3/web-login/src/tests/: resource.robot
