[tool.poetry]
name = "Ohtutesting app"
version = "0.0.1"
description = "Sovellus joka toimii testisyötteenä ohtun viikon 2 laskareihin"
authors = ["Matti Luukkainen", "Kalle Ilves"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
editdistance = "^0.6.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.1.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
